--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -15,10 +15,6 @@
     button:hover { background-color: #e55a00; }
     #mensagem { margin-top: 10px; color: green; text-align: center; }
     #erro { margin-top: 10px; color: red; text-align: center; }
-    #github-sync { margin-top: 20px; max-width: 500px; margin: auto; background: white; padding: 10px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    #github-sync textarea { width: 100%; height: 100px; resize: vertical; }
-    #github-sync input { margin-bottom: 10px; }
-    #github-sync button { margin-top: 10px; width: 100%; }
     #produtos-cadastrados { margin: 20px auto; max-width: 800px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     #produtos-cadastrados table { width: 100%; border-collapse: collapse; }
     #produtos-cadastrados th, #produtos-cadastrados td { padding: 10px; border: 1px solid #ddd; text-align: left; }
@@ -75,7 +71,7 @@
       <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" aria-required="true">
       <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" max="100000" required aria-required="true">
       <input type="file" name="imagens" accept="image/jpeg,image/png" multiple>
-      <p style="font-size: 14px; color: #666;">Selecione imagens (JPEG/PNG, máx. 500 KB cada, até 3 por produto). Elas serão embutidas no produtos.json.</p>
+      <p style="font-size: 14px; color: #666;">Selecione imagens (JPEG/PNG, máx. 500 KB cada, até 3 por produto).</p>
       <p style="font-size: 14px; color: #666;">Nota: O preço será usado apenas na área administrativa e não será exibido na página principal.</p>
       <button type="submit">Adicionar</button>
     </form>
@@ -101,16 +97,6 @@
         <tbody id="lista-produtos"></tbody>
       </table>
     </div>
-
-    <div id="github-sync">
-      <h3>Sincronizar com GitHub</h3>
-      <input type="password" id="github-token" placeholder="GitHub Personal Access Token" aria-label="Token de acesso pessoal do GitHub">
-      <button onclick="salvarToken()">Salvar Token</button>
-      <textarea id="json-text" readonly></textarea>
-      <button onclick="atualizarGitHub()">Atualizar produtos.json no GitHub</button>
-      <textarea id="import-json" placeholder="Cole o JSON para importar"></textarea>
-      <button onclick="importarJSON()">Importar JSON</button>
-    </div>
   </div>
 
   <div class="modal" id="imageModal">
@@ -124,70 +110,12 @@
   </div>
 
   <script>
-    const VERSION = "1.0.10";
+    const VERSION = "1.0.11";
+    const API_URL = 'http://localhost:3000'; // Atualizar para URL do Render
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
     let isFetching = false;
-
-    function carregarToken() {
-      const token = localStorage.getItem('github_token');
-      if (token) document.getElementById('github-token').value = token;
-    }
-
-    function salvarToken() {
-      const token = document.getElementById('github-token').value.trim();
-      const mensagem = document.getElementById('mensagem');
-      const erro = document.getElementById('erro');
-      if (!token) {
-        erro.textContent = 'Por favor, insira um token válido!';
-        mensagem.textContent = '';
-        return;
-      }
-      localStorage.setItem('github_token', token);
-      mensagem.textContent = 'Token salvo com sucesso!';
-      erro.textContent = '';
-    }
-
-    async function compressImage(file, maxWidth = 800, maxHeight = 800) {
-      return new Promise((resolve, reject) => {
-        if (file.size > 500 * 1024) reject(new Error('Imagem muito grande. Máximo 500 KB.'));
-        if (!['image/jpeg', 'image/png'].includes(file.type)) reject(new Error('Formato não suportado. Use JPEG ou PNG.'));
-        const img = new Image();
-        img.src = URL.createObjectURL(file);
-        img.onload = () => {
-          const canvas = document.createElement('canvas');
-          let width = img.width;
-          let height = img.height;
-          if (width > maxWidth) {
-            height = Math.round((height * maxWidth) / width);
-            width = maxWidth;
-          }
-          if (height > maxHeight) {
-            width = Math.round((width * maxHeight) / height);
-            height = maxHeight;
-          }
-          canvas.width = width;
-          canvas.height = height;
-          canvas.getContext('2d').drawImage(img, 0, 0, width, height);
-          canvas.toBlob(blob => {
-            if (blob.size > 500 * 1024) reject(new Error('Imagem comprimida ainda excede 500 KB.'));
-            resolve(blob);
-          }, 'image/jpeg', 0.7);
-        };
-        img.onerror = () => reject(new Error('Erro ao comprimir imagem.'));
-      });
-    }
-
-    async function convertImageToBase64(file) {
-      const compressed = await compressImage(file);
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.onerror = () => reject(new Error('Erro ao converter imagem.'));
-        reader.readAsDataURL(compressed);
-      });
-    }
 
     async function carregarProdutos() {
       if (isFetching) return;
@@ -195,74 +123,27 @@
       const mensagem = document.getElementById('mensagem');
       const erro = document.getElementById('erro');
       const loading = document.getElementById('loading');
-      const urls = [
-        'https://raw.githubusercontent.com/bingaby/centrodecompra/main/produtos.json',
-        'https://bingaby.github.io/centrodecompra/produtos.json'
-      ];
       try {
         loading.style.display = 'block';
-        let response;
-        for (const url of urls) {
-          try {
-            response = await fetch(url);
-            if (response.ok) break;
-          } catch (e) {
-            console.warn(`Falha ao tentar URL ${url}:`, e);
-          }
-        }
-        if (!response || !response.ok) {
-          if (response?.status === 404) {
+        const response = await fetch(`${API_URL}/produtos`);
+        if (!response.ok) {
+          if (response.status === 404) {
             produtos = [];
-            document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
             atualizarListaProdutos();
-            mensagem.textContent = 'Arquivo produtos.json não encontrado. Inicializado como vazio.';
+            mensagem.textContent = 'Nenhum produto encontrado.';
             return;
           }
-          throw new Error(`Erro HTTP: ${response?.status || 'Desconhecido'}`);
-        }
-        const contentType = response.headers.get('Content-Type');
-        if (!contentType || !contentType.includes('application/json')) {
-          const text = await response.text();
-          console.error('Resposta recebida:', text);
-          throw new Error('Resposta não é JSON. Verifique se produtos.json é válido.');
+          throw new Error(`Erro HTTP: ${response.status}`);
         }
         produtos = await response.json();
-        document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
         atualizarListaProdutos();
       } catch (error) {
-        console.error('Erro ao carregar produtos:', error);
-        erro.textContent = error.message || 'Erro ao carregar produtos. Verifique a conexão ou o arquivo produtos.json.';
+        erro.textContent = error.message || 'Erro ao carregar produtos. Verifique o servidor.';
         mensagem.textContent = '';
       } finally {
         loading.style.display = 'none';
         isFetching = false;
       }
-    }
-
-    async function adicionarProduto(formData) {
-      const imagens = [];
-      const files = formData.getAll('imagens');
-      if (files.length > 3) throw new Error('Máximo de 3 imagens por produto.');
-      for (const file of files) {
-        if (file.size > 0) {
-          const base64 = await convertImageToBase64(file);
-          imagens.push(base64);
-        }
-      }
-      const produto = {
-        _id: Date.now().toString() + Math.random().toString(36).substr(2, 9),
-        nome: formData.get('nome'),
-        descricao: formData.get('descricao'),
-        categoria: formData.get('categoria'),
-        loja: formData.get('loja'),
-        link: formData.get('link'),
-        preco: formData.get('preco'),
-        imagens
-      };
-      produtos.push(produto);
-      document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
-      atualizarListaProdutos();
-      await atualizarGitHub(true);
     }
 
     function atualizarListaProdutos() {
@@ -296,106 +177,14 @@
       const loading = document.getElementById('loading');
       try {
         loading.style.display = 'block';
+        const response = await fetch(`${API_URL}/produtos/${id}`, { method: 'DELETE' });
+        if (!response.ok) throw new Error('Erro ao excluir produto.');
         produtos = produtos.filter(p => p._id !== id);
-        document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
         atualizarListaProdutos();
-        await atualizarGitHub(true);
         mensagem.textContent = 'Produto excluído com sucesso!';
         erro.textContent = '';
       } catch (error) {
         erro.textContent = error.message || 'Erro ao excluir produto.';
-        mensagem.textContent = '';
-      } finally {
-        loading.style.display = 'none';
-      }
-    }
-
-    async function atualizarGitHub(auto = false) {
-      const token = localStorage.getItem('github_token') || document.getElementById('github-token').value.trim();
-      const jsonText = document.getElementById('json-text').value;
-      const mensagem = document.getElementById('mensagem');
-      const erro = document.getElementById('erro');
-      const loading = document.getElementById('loading');
-      if (!token) {
-        erro.textContent = 'Por favor, insira e salve o GitHub Personal Access Token!';
-        mensagem.textContent = '';
-        if (!auto) loading.style.display = 'none';
-        return;
-      }
-      try {
-        if (!auto) loading.style.display = 'block';
-        // Validar JSON antes de enviar
-        const parsedJson = JSON.parse(jsonText);
-        const jsonSize = new TextEncoder().encode(jsonText).length;
-        if (jsonSize > 90 * 1024 * 1024) { // 90 MB para margem
-          throw new Error('Arquivo produtos.json excede 90 MB. Remova imagens ou use URLs.');
-        }
-        let sha = null;
-        const getResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
-          method: 'GET',
-          headers: {
-            'Authorization': `Bearer ${token}`,
-            'Accept': 'application/vnd.github.v3+json',
-            'Content-Type': 'application/json'
-          }
-        });
-        if (getResponse.ok) {
-          const fileData = await getResponse.json();
-          sha = fileData.sha;
-        }
-        const content = btoa(unescape(encodeURIComponent(jsonText)));
-        const updateResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
-          method: 'PUT',
-          headers: {
-            'Authorization': `Bearer ${token}`,
-            'Accept': 'application/vnd.github.v3+json',
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({
-            message: 'Atualiza produtos.json via admin',
-            content: content,
-            sha: sha,
-            branch: 'main'
-          })
-        });
-        if (!updateResponse.ok) {
-          const errorData = await updateResponse.json();
-          throw new Error(errorData.message || 'Erro ao atualizar produtos.json');
-        }
-        mensagem.textContent = 'produtos.json atualizado no GitHub! Pode demorar alguns minutos para aparecer na página principal.';
-        erro.textContent = '';
-      } catch (error) {
-        erro.textContent = error.message || 'Erro ao sincronizar com o GitHub. Verifique o token ou conexão.';
-        mensagem.textContent = '';
-      } finally {
-        if (!auto) loading.style.display = 'none';
-      }
-    }
-
-    async function importarJSON() {
-      const importText = document.getElementById('import-json').value;
-      const mensagem = document.getElementById('mensagem');
-      const erro = document.getElementById('erro');
-      const loading = document.getElementById('loading');
-      try {
-        loading.style.display = 'block';
-        const importedProdutos = JSON.parse(importText);
-        if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
-        for (const produto of importedProdutos) {
-          if (!produto.nome || !produto.descricao || !produto.categoria || !produto.loja || !produto.link) {
-            throw new Error('Produto inválido! Verifique os campos obrigatórios.');
-          }
-          produto._id = Date.now().toString() + Math.random().toString(36).substr(2, 9);
-          produtos.push(produto);
-        }
-        document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
-        atualizarListaProdutos();
-        await atualizarGitHub(true);
-        mensagem.textContent = 'Produtos importados com sucesso!';
-        erro.textContent = '';
-        document.getElementById('import-json').value = '';
-      } catch (error) {
-        erro.textContent = error.message || 'Erro ao importar JSON.';
         mensagem.textContent = '';
       } finally {
         loading.style.display = 'none';
@@ -440,7 +229,6 @@
     }
 
     document.addEventListener('DOMContentLoaded', () => {
-      carregarToken();
       carregarProdutos();
 
       const formProduto = document.getElementById('form-produto');
@@ -452,8 +240,20 @@
         try {
           loading.style.display = 'block';
           const formData = new FormData(formProduto);
-          await adicionarProduto(formData);
-          mensagem.textContent = 'Produto adicionado com sucesso!';
+          const files = formData.getAll('imagens');
+          if (files.length > 3) throw new Error('Máximo de 3 imagens por produto.');
+          const response = await fetch(`${API_URL}/produtos`, {
+            method: 'POST',
+            body: formData
+          });
+          if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.error || 'Erro ao adicionar produto.');
+          }
+          const result = await response.json();
+          produtos.push(result.produto);
+          atualizarListaProdutos();
+          mensagem.textContent = result.message;
           erro.textContent = '';
           formProduto.reset();
         } catch (error) {
