--- a/index.html
+++ b/index.html
@@ -1,125 +1,145 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Centro de Compra</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
+  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:url" content="https://seu-site.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta name="twitter:image" content="logos/centrodecompras.jpg">
+  <title>Centro de Compras - Ofertas do Dia</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Roboto', Arial, sans-serif; padding: 20px; background-color: #f5f5f5; }
-    h1 { text-align: center; color: #333; }
-    #controles { max-width: 800px; margin: 20px auto; display: flex; gap: 10px; flex-wrap: wrap; }
-    select, input[type="text"], button { padding: 10px; border: 1px solid #ddd; border-radius: 4px; font-size: 16px; }
-    button { background-color: #ff6200; color: white; border: none; cursor: pointer; }
-    button:hover { background-color: #e55a00; }
-    #grid-produtos { max-width: 800px; margin: auto; display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; }
-    .produto-card { background: white; padding: 15px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); text-align: center; }
-    .produto-card img { width: 100%; height: 150px; object-fit: cover; border-radius: 4px; }
-    .produto-card h3 { font-size: 18px; margin: 10px 0; }
-    .produto-card p { font-size: 14px; color: #666; }
-    .botao-comprar { display: inline-block; padding: 10px; background-color: #ff6200; color: white; text-decoration: none; border-radius: 4px; }
-    .botao-comprar:hover { background-color: #e55a00; }
-    #mensagem-erro { color: red; text-align: center; margin: 10px 0; }
-    #loading { display: none; text-align: center; margin: 10px 0; }
-    #loading::after { content: 'Carregando...'; animation: dots 1s infinite; }
-    @keyframes dots { 0%, 20% { content: 'Carregando.'; } 40% { content: 'Carregando..'; } 60% { content: 'Carregando...'; } }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Centro de Compra</h1>
-  <div id="controles">
-    <select id="filtro-categoria">
-      <option value="">Todas as categorias</option>
-    </select>
-    <select id="filtro-loja">
-      <option value="">Todas as lojas</option>
-    </select>
-    <input type="text" id="busca" placeholder="Buscar produtos...">
-    <button id="atualizar-ofertas">Atualizar Ofertas</button>
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="#">
+        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="logo" loading="lazy" aria-label="Logo - clique duplo para acessar a administração" />
+      </a>
+    </div>
+    <div class="header-text">
+      <h1>Centro de Compras</h1>
+      <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
+    </div>
+  </header>
+
+  <nav>
+    <a href="index.html">Promoções</a>
+    <a href="cupom.html">Cupom de desconto</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+
+  <div class="container">
+    <aside class="sidebar-categorias">
+      <h3>Categorias</h3>
+      <ul>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" role="button" aria-label="Filtrar por Todas as Categorias">Todas as Categorias</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')" role="button" aria-label="Filtrar por Eletrônicos">Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')" role="button" aria-label="Filtrar por Moda">Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')" role="button" aria-label="Filtrar por Fitness">Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')" role="button" aria-label="Filtrar por Casa e Decoração">Casa e Decoração</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')" role="button" aria-label="Filtrar por Beleza">Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')" role="button" aria-label="Filtrar por Esportes">Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')" role="button" aria-label="Filtrar por Livros">Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')" role="button" aria-label="Filtrar por Infantil">Infantil</li>
+        <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
+        <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
+      </ul>
+    </aside>
+
+    <main>
+      <section id="ofertas-section">
+        <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+        <div class="lojas-parceiras">
+          <h3>🌟 Lojas Parceiras</h3>
+          <div class="grid-lojas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')" role="button" aria-label="Filtrar por Todas as Lojas">
+              <span>Todas as Lojas</span>
+            </div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button" aria-label="Filtrar por Amazon">
+              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
+              <span class="amazon">Amazon</span>
+            </div>
+            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" role="button" aria-label="Filtrar por Magalu">
+              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
+              <span class="magalu">Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" role="button" aria-label="Filtrar por Shein">
+              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
+              <span class="shein">Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button" aria-label="Filtrar por Shopee">
+              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
+              <span class="shopee">Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" role="button" aria-label="Filtrar por Mercado Livre">
+              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
+              <span class="mercadolivre">Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" role="button" aria-label="Filtrar por Alibaba">
+              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
+              <span class="alibaba">Alibaba</span>
+            </div>
+          </div>
+        </div>
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
+        <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
+        <div id="busca-feedback" class="busca-feedback">Buscando...</div>
+        <div class="loading-spinner" id="loading-spinner">Carregando...</div>
+        <div class="grid-lojas" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
+      </section>
+
+      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
+      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
+          <div class="icon">
+            <img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy">
+          </div>
+          <span>TikTok</span>
+        </a>
+        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
+          <div class="icon">
+            <img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy">
+          </div>
+          <span>Instagram</span>
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank">
+          <div class="icon">
+            <img src="logos/x.png" alt="Ícone do X" loading="lazy">
+          </div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
+          <div class="icon">
+            <img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy">
+          </div>
+          <span>YouTube</span>
+        </a>
+      </div>
+    </main>
   </div>
-  <div id="mensagem-erro"></div>
-  <div id="loading" class="loading"></div>
-  <div id="grid-produtos"></div>
 
-  <script>
-    const JSON_URL = 'https://raw.githubusercontent.com/bingaby/centrodecompra/main/produtos.json';
-    let produtos = [];
+  <footer>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compras "CdC"</strong> © <span id="year"></span></p>
+  </footer>
 
-    async function carregarProdutos() {
-      const mensagemErro = document.getElementById('mensagem-erro');
-      const loading = document.getElementById('loading');
-      try {
-        loading.style.display = 'block';
-        console.log('Carregando:', JSON_URL);
-        const response = await fetch(JSON_URL, { cache: 'no-cache' });
-        console.log('Resposta:', response.status, response.statusText);
-        if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
-        produtos = await response.json();
-        atualizarGrid();
-        atualizarFiltros();
-        mensagemErro.textContent = produtos.length ? '' : 'Nenhum produto encontrado.';
-      } catch (error) {
-        console.error('Erro:', error);
-        mensagemErro.textContent = 'Erro ao carregar produtos. Tente novamente.';
-      } finally {
-        loading.style.display = 'none';
-      }
-    }
+  <div class="robo-assistente">
+    <a href="https://wa.me/5521975179737" target="_blank">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem">
+      <div class="robo-texto">Posso ajudar?</div>
+    </a>
+  </div>
 
-    function atualizarGrid() {
-      const grid = document.getElementById('grid-produtos');
-      grid.innerHTML = '';
-      if (!produtos.length) {
-        grid.innerHTML = '<p>Nenhum produto encontrado.</p>';
-        return;
-      }
-      produtos.forEach(produto => {
-        const card = document.createElement('div');
-        card.className = 'produto-card';
-        const imagem = produto.imagens?.length ? produto.imagens[0] : 'https://via.placeholder.com/150';
-        card.innerHTML = `
-          <img src="${imagem}" alt="${produto.nome}">
-          <h3>${produto.nome}</h3>
-          <p>${produto.descricao}</p>
-          <p><strong>Categoria:</strong> ${produto.categoria}</p>
-          <p><strong>Loja:</strong> ${produto.loja}</p>
-          <a href="${produto.link}" target="_blank" class="botao-comprar">Comprar</a>
-        `;
-        grid.appendChild(card);
-      });
-    }
-
-    function atualizarFiltros() {
-      const categorias = [...new Set(produtos.map(p => p.categoria))];
-      const lojas = [...new Set(produtos.map(p => p.loja))];
-      const filtroCategoria = document.getElementById('filtro-categoria');
-      const filtroLoja = document.getElementById('filtro-loja');
-      filtroCategoria.innerHTML = '<option value="">Todas as categorias</option>' +
-        categorias.map(cat => `<option value="${cat}">${cat}</option>`).join('');
-      filtroLoja.innerHTML = '<option value="">Todas as lojas</option>' +
-        lojas.map(loja => `<option value="${loja}">${loja}</option>`).join('');
-    }
-
-    function filtrarProdutos() {
-      const categoria = document.getElementById('filtro-categoria').value;
-      const loja = document.getElementById('filtro-loja').value;
-      const busca = document.getElementById('busca').value.toLowerCase();
-      const filtered = produtos.filter(p =>
-        (!categoria || p.categoria === categoria) &&
-        (!loja || p.loja === loja) &&
-        (p.nome.toLowerCase().includes(busca) || p.descricao.toLowerCase().includes(busca))
-      );
-      produtos = filtered;
-      atualizarGrid();
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('atualizar-ofertas').addEventListener('click', carregarProdutos);
-      document.getElementById('filtro-categoria').addEventListener('change', filtrarProdutos);
-      document.getElementById('filtro-loja').addEventListener('change', filtrarProdutos);
-      document.getElementById('busca').addEventListener('input', filtrarProdutos);
-      carregarProdutos();
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
